# how2gamjam

./: .gitignore  AccessKeys.hs  LICENSE  Main.hs  README.md  cleaner.py  how2gamjam.cabal  main.py  markov.hs  markov.py  notes  requirements.txt  runMarkov.py  scraper.py  tokenizers  tweeter.py
data/: cleanCorpus.txt
ebook/: markov.py
haskell-old/: AccessKeys.hs  Main.hs  how2gamjam.cabal
tools/: cleaner.py  runMarkov.py
wordfilter/test/: wordfilter_test.py
